Add "daily effort"

--- a/web/index.html
+++ b/web/index.html
@@ -199,8 +199,9 @@
                 </div>
             </div>
             <h1 class="sub-header">解いた問題数の推移</h1>
-            <div class="row placeholders" id="user-solved-problems">
-            </div>
+            <div class="row placeholders" id="user-solved-problems"></div>
+            <h1 class="sub-header">Daily Effort</h1>
+            <div class="row placeholders" id="user-solved-daily"></div>
         </div>
     </div>
     <div class="container" id="problem-container">
