--- a/web/index.html
+++ b/web/index.html
@@ -291,6 +291,9 @@
                             <th data-field="first" data-sortable="true">
                                 最速提出
                             </th>
+                            <th data-field="difficulty" data-sortable="true">
+                                難易度
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
