--- a/web/index.html
+++ b/web/index.html
@@ -315,30 +315,28 @@
                 AtCoder Beginner Contest
             </h1>
         </div>
-        <div class="table">
-            <table class="table table-striped table-bordered">
+        <div class="table-responsive">
+            <table id="beginner" class="table table-striped" data-toggle="table">
                 <thead>
                 <tr>
-                    <th>
+                    <th data-field="contest">
                         コンテスト
                     </th>
-                    <th>
+                    <th data-field="problem_a" data-cell-style="categoryCellStyle">
                         A 問題
                     </th>
-                    <th>
+                    <th data-field="problem_b" data-cell-style="categoryCellStyle">
                         B 問題
                     </th>
-                    <th>
+                    <th data-field="problem_c" data-cell-style="categoryCellStyle">
                         C 問題
                     </th>
-                    <th>
+                    <th data-field="problem_d" data-cell-style="categoryCellStyle">
                         D 問題
                     </th>
                 </tr>
                 </thead>
-                <tbody id="beginner">
-                <tr>
-                </tr>
+                <tbody>
                 </tbody>
             </table>
         </div>
@@ -347,28 +345,28 @@
                 AtCoder Regular Contest
             </h1>
         </div>
-        <div class="table">
-            <table class="table table-striped table-bordered">
+        <div class="table-responsive">
+            <table id="regular" class="table table-striped" data-toggle="table">
                 <thead>
                 <tr>
-                    <th>
+                    <th data-field="contest">
                         コンテスト
                     </th>
-                    <th>
+                    <th data-field="problem_a" data-cell-style="categoryCellStyle">
                         A 問題
                     </th>
-                    <th>
+                    <th data-field="problem_b" data-cell-style="categoryCellStyle">
                         B 問題
                     </th>
-                    <th>
+                    <th data-field="problem_c" data-cell-style="categoryCellStyle">
                         C 問題
                     </th>
-                    <th>
+                    <th data-field="problem_d" data-cell-style="categoryCellStyle">
                         D 問題
                     </th>
                 </tr>
                 </thead>
-                <tbody id="regular">
+                <tbody>
                 </tbody>
             </table>
         </div>
