--- a/web/index.html
+++ b/web/index.html
@@ -23,15 +23,12 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">
+                <span class="sr-only">
                         Toggle navigation
-                    </span>
-                    <span class="icon-bar">
-                    </span>
-                    <span class="icon-bar">
-                    </span>
-                    <span class="icon-bar">
-                    </span>
+                </span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="./?kind=index" id="header-link">
                 AtCoder Problems
@@ -43,7 +40,7 @@
                     <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown"
                        class="dropdown-toggle" href="#">
                         ランキング
-                                <span class="caret">
+                        <span class="caret">
                                 </span>
                     </a>
                     <ul class="dropdown-menu">
@@ -78,7 +75,7 @@
                     <a aria-expanded="false" aria-haspopup="true" role="button" data-toggle="dropdown"
                        class="dropdown-toggle" href="#">
                         リンク
-                                <span class="caret">
+                        <span class="caret">
                                 </span>
                     </a>
                     <ul class="dropdown-menu">
