Add github link

--- a/web/index.html
+++ b/web/index.html
@@ -95,6 +95,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="https://github.com/kenkoooo/AtCoderProblems" target='_blank'>
+                                GitHub
+                            </a>
+                        </li>
+                        <li>
                             <a href="https://gist.github.com/kenkoooo/4618461adf0f5b4d3e3e" target='_blank'>
                                 非公式 API
                             </a>
