難易度ではなくランク

--- a/web/index.html
+++ b/web/index.html
@@ -302,7 +302,7 @@
                         最速提出
                     </th>
                     <th data-field="difficulty" data-sortable="true">
-                        難易度
+                        ランク
                     </th>
                 </tr>
                 </thead>
