--- a/web/index.html
+++ b/web/index.html
@@ -314,6 +314,42 @@
     <div id="problem-category" class="row">
         <div class="page-header">
             <h1>
+                AtCoder Grand Contest
+            </h1>
+        </div>
+        <div class="table-responsive">
+            <table id="grand" class="table table-striped" data-toggle="table">
+                <thead>
+                <tr>
+                    <th data-field="contest">
+                        コンテスト
+                    </th>
+                    <th data-field="problem_a" data-cell-style="categoryCellStyle">
+                        A 問題
+                    </th>
+                    <th data-field="problem_b" data-cell-style="categoryCellStyle">
+                        B 問題
+                    </th>
+                    <th data-field="problem_c" data-cell-style="categoryCellStyle">
+                        C 問題
+                    </th>
+                    <th data-field="problem_d" data-cell-style="categoryCellStyle">
+                        D 問題
+                    </th>
+                    <th data-field="problem_e" data-cell-style="categoryCellStyle">
+                        E 問題
+                    </th>
+                    <th data-field="problem_f" data-cell-style="categoryCellStyle">
+                        F 問題
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+        <div class="page-header">
+            <h1>
                 AtCoder Beginner Contest
             </h1>
         </div>
