--- a/web/index.html
+++ b/web/index.html
@@ -241,6 +241,10 @@
             <button type="submit" class="btn btn-default">
                 Search
             </button>
+            <div id="list-options">
+                hoge
+            </div>
+
         </form>
     </div>
     <div id="battle-list" class="row">
