--- a/web/index.html
+++ b/web/index.html
@@ -241,10 +241,10 @@
             <button type="submit" class="btn btn-default">
                 Search
             </button>
-            <div id="list-options">
-                hoge
-            </div>
 
+            <div class="form-group" id="list-options">
+                <input type="checkbox" name="trying" value="1"/>
+            </div>
         </form>
     </div>
     <div id="battle-list" class="row">
