AC していない問題のみ表示

--- a/web/index.html
+++ b/web/index.html
@@ -243,7 +243,7 @@
             </button>
 
             <div class="form-group" id="list-options">
-                <input type="checkbox" name="trying" value="1"/>
+                <input type="checkbox" name="trying" value="1"/> AC していない問題のみ表示
             </div>
         </form>
     </div>
