--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.css"/>
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet"/>
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@kenkoooo"/>
+    <meta name="twitter:title" content="AtCoder Problems"/>
+    <meta name="twitter:description" content="View the problems of AtCoder."/>
 </head>
 
 <body>
