練習会機能

--- a/web/index.html
+++ b/web/index.html
@@ -114,6 +114,7 @@
         </div>
     </div>
 </nav>
+
 <div class="container" id="user-container">
     <div class="row" id="header-block">
         <form action="./" method="get" class="form-inline page-header" id="user-search-block">
@@ -241,6 +242,7 @@
                 <input type="radio" name="list" value="0"/> カテゴリ表示
                 <input type="radio" name="list" value="1"/> リスト表示
                 <input type="radio" name="list" value="2"/> バトル
+                <input type="radio" name="list" value="3"/> 練習
             </div>
             <button type="submit" class="btn btn-default">
                 Search
@@ -250,6 +252,11 @@
                 <input type="checkbox" name="trying" value="1"/> AC していない問題のみ表示
             </div>
         </form>
+    </div>
+
+    <div class="container" id="practice-container">
+
+
     </div>
     <div id="battle-list" class="row">
         <div class="table-responsive">
