ラベル書き換え

--- a/web/index.html
+++ b/web/index.html
@@ -225,14 +225,14 @@
         </p>
         <form action="./" method="get" class="form-inline" id="problem-search-block">
             <div class="form-group">
-                <label>
+                <label id="user_id_label">
                     User ID:
                 </label>
                 <input type="text" class="form-control" id="user_name_text" placeholder="User ID" name="name"
                        value="kenkoooo"/>
             </div>
             <div class="form-group">
-                <label>
+                <label id="rival-label">
                     ライバル:
                 </label>
                 <input type="text" class="form-control" id="rival_text" placeholder="User ID,User ID,User ID,..."
