レイアウトの正常化

--- a/web/index.html
+++ b/web/index.html
@@ -141,22 +141,22 @@
             <div class="col-xs-6 col-sm-3">
                 <h4>AC問題数</h4>
                 <h3 id="ac-num">1e9+7 問</h3>
-                <span class="text-muted" id="ac-rank"></span>
+                <span class="text-muted" id="ac-rank">-</span>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <h4>ショートコード数</h4>
                 <h3 id="short-num">1e9+7 問</h3>
-                <span class="text-muted" id="short-rank"></span>
+                <span class="text-muted" id="short-rank">-</span>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <h4>最速コード数</h4>
                 <h3 id="fast-num">1e9+7 問</h3>
-                <span class="text-muted" id="fast-rank"></span>
+                <span class="text-muted" id="fast-rank">-</span>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <h4>最速提出数</h4>
                 <h3 id="first-num">1e9+7 問</h3>
-                <span class="text-muted" id="first-rank"></span>
+                <span class="text-muted" id="first-rank">-</span>
             </div>
         </div>
         <h1 class="sub-header">
