とりあえず雛形的なものを

--- a/web/index.html
+++ b/web/index.html
@@ -158,6 +158,16 @@
                 <h3 id="first-num">1e9+7 問</h3>
                 <span class="text-muted" id="first-rank">-</span>
             </div>
+            <div class="col-xs-6 col-sm-3">
+                <h4>最長連続 AC 日数</h4>
+                <h3 id="ac-days">1e9+7 日</h3>
+                <span class="text-muted" id="ac-days-rank">-</span>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                <h4>現在の連続 AC 日数</h4>
+                <h3 id="now-days">1e9+7 日</h3>
+                <span class="text-muted">-</span>
+            </div>
         </div>
         <h1 class="sub-header">
             AtCoder Beginner Contest
