--- a/web/index.html
+++ b/web/index.html
@@ -166,7 +166,7 @@
             <div class="col-xs-6 col-sm-3">
                 <h4>現在の連続 AC 日数</h4>
                 <h3 id="now-days">1e9+7 日</h3>
-                <span class="text-muted">-</span>
+                <span class="text-muted" id="last-date">-</span>
             </div>
         </div>
         <h1 class="sub-header">
