--- a/web/index.html
+++ b/web/index.html
@@ -474,7 +474,7 @@ Bootstrap core JavaScript
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/bootstrap-table.min.js"></script>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.js" charset="utf-8"></script>
-<script src="./atcoder.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 
 </html>
